force-app/main/default/objects/CategoryType__c/CategoryType__c.object-meta.xml
<CustomObject>
    <label>Category</label>
    <nameField>
        <displayFormat>CN-{0}</displayFormat>
        <label>Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>