force-app/main/default/objects/CategoryType__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Pick one for contact.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Relationship</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>ToolBank Affiliate</fullName>
            </value>
            <value>
                <fullName>ToolBank Member Agency</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Volunteer-Youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>