force-app/main/default/objects/CategoryType__c/fields/Category_Detail__c.field-meta.xml
<CustomField>
    <fullName>Category_Detail__c</fullName>
    <description>Pick the detail(s) of category for this contact. You can choose multiple details.</description>
    <label>Category Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member Agency-Rockport, TX</fullName>
            </value>
            <value>
                <fullName>Member Agency-Beaumont, TX</fullName>
            </value>
            <value>
                <fullName>Member Agency-Houston, TX</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Board Prospect</fullName>
            </value>
            <value>
                <fullName>Community Partner</fullName>
            </value>
            <value>
                <fullName>Community Service</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Disaster Services Partner</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>Former Board Member</fullName>
            </value>
            <value>
                <fullName>Former Staff</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Membership Association</fullName>
            </value>
            <value>
                <fullName>Misc. Vendor</fullName>
            </value>
            <value>
                <fullName>Public Official</fullName>
            </value>
            <value>
                <fullName>Special Event</fullName>
            </value>
            <value>
                <fullName>ToolBank Member Agency</fullName>
            </value>
            <value>
                <fullName>Utility Vendor (etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>