force-app/main/default/objects/CategoryType__c/fields/Grant_Funded_Activity__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funded_Activity__c</fullName>
    <description>This category collects information for organizations that have been supported by specific grants and or funding.</description>
    <label>Grant Funded Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebuild Texas Fund</fullName>
            </value>
            <value>
                <fullName>Rebuild Texas-CDP</fullName>
            </value>
            <value>
                <fullName>American Red Cross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>